# master-sdt-docs

./: README.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt  runtime.txt
docs/: index.md
docs/UAS/: backup-restore.md  database-migration-guide.md  network-install.md
docs/UAS/User Manual/: 1-operating-instructions.md  10-creating-editing-tree-structure.md  11-managing-alarms.md  12-upload-download.md  13-data-overview-analysis.md  14-graph-pane.md  15-reports.md  16-assigning-operators-users.md  17-backing-up-restoring-database.md  18-responsibility-limits.md  19-copyright.md  2-ultranalysis-Installation.md  3-activation-and-registration.md  4-updating-upgrading.md  5-introduction-to-database.md  6-creating-and-editing.md  7-remote-access.md  8-uas3-workspace.md  9-system-settings.md  Installation.md
docs/Vigilant/: index.md
docs/assets/css/: custom.css
site/: 404.html  index.html  sitemap.xml
site/UAS/User Manual/Installation/: index.html
site/UAS/backup-restore/: index.html
site/UAS/database-migration-guide/: index.html
site/UAS/network-install/: index.html
site/Vigilant/: index.html
site/assets/css/: custom.css
site/search/: search_index.json
