[tool.poetry]
name = "mkd-sdt-docs"
version = "0.1.0"
description = "MKDocs Project for SDT Docs"
authors = ["japallister <jim@sdthearmore.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.2"
mkdocs-material = "^7.1.7"
mkdocs-material-extensions = "^1.0.1"
mkdocs-pymdownx-material-extras = "^1.4"
pymdown-extensions = "^8.2"
fontawesome-markdown = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
